[package]
name = "aa"
version = "0.1.1"
edition = "2021"
authors = ["sylvavv"]
repository = "https://github.com/sylvavv/aa"
license = "MIT"
description = "Windows System Utilities"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]
